--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -34,7 +34,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Virtual Tourist" id="Ify-V5-iwE">
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="opR-Ac-AaY"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="opR-Ac-AaY">
+                            <connections>
+                                <action selector="editButtonPressed:" destination="BYZ-38-t0r" id="JqE-30-RJv"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="aG8-6Q-lTg" id="dg8-n4-7t1"/>
