--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -62,16 +62,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="AYU-OU-3hL">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="172"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="MZn-1O-VUO"/>
+                                    <constraint firstAttribute="height" constant="172" id="Eh9-8D-yaC"/>
                                 </constraints>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5Kw-g6-SF3">
-                                <rect key="frame" x="0.0" y="188" width="375" height="728"/>
+                                <rect key="frame" x="0.0" y="244" width="375" height="672"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="728" id="axE-5w-gfG"/>
+                                    <constraint firstAttribute="height" constant="672" id="6YM-BO-dgu"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8V4-8B-8lb">
                                     <size key="itemSize" width="115" height="110"/>
@@ -94,10 +94,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="leading" secondItem="EwS-KU-h91" secondAttribute="leading" id="9e7-U3-YOZ"/>
-                            <constraint firstItem="AYU-OU-3hL" firstAttribute="top" secondItem="EwS-KU-h91" secondAttribute="top" id="Sd3-8G-mPS"/>
+                            <constraint firstItem="5Kw-g6-SF3" firstAttribute="top" secondItem="AYU-OU-3hL" secondAttribute="bottom" constant="8" id="UbV-5x-tdc"/>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="leading" secondItem="5Kw-g6-SF3" secondAttribute="leading" id="bdE-zp-Sqs"/>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="trailing" secondItem="5Kw-g6-SF3" secondAttribute="trailing" id="g0N-m0-rps"/>
                             <constraint firstAttribute="trailing" secondItem="AYU-OU-3hL" secondAttribute="trailing" id="n1q-nN-KIa"/>
+                            <constraint firstItem="AYU-OU-3hL" firstAttribute="top" secondItem="Xkz-eC-Pvw" secondAttribute="bottom" id="yNm-TY-ehN"/>
                             <constraint firstItem="5Kw-g6-SF3" firstAttribute="top" secondItem="AYU-OU-3hL" secondAttribute="bottom" constant="8" symbolic="YES" id="yrH-3R-6je"/>
                         </constraints>
                     </view>
