--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -64,53 +64,70 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="AYU-OU-3hL">
                                 <rect key="frame" x="0.0" y="64" width="375" height="172"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="172" id="Eh9-8D-yaC"/>
+                                    <constraint firstAttribute="height" constant="172" id="noq-rB-o9V"/>
                                 </constraints>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5Kw-g6-SF3">
-                                <rect key="frame" x="0.0" y="244" width="375" height="672"/>
+                                <rect key="frame" x="0.0" y="236" width="375" height="431"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="672" id="6YM-BO-dgu"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8V4-8B-8lb">
-                                    <size key="itemSize" width="115" height="110"/>
+                                    <size key="itemSize" width="125" height="126"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="photoViewCell" reuseIdentifier="photoViewCell" id="WCb-wh-TyM" customClass="PhotoViewCell" customModule="VirtualTourist" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="115" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="126"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="115" height="110"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="125" height="126"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zbB-WG-QfJ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="125" height="126"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="zbB-WG-QfJ" secondAttribute="trailing" id="7Mm-ZB-RIa"/>
+                                            <constraint firstItem="zbB-WG-QfJ" firstAttribute="top" secondItem="WCb-wh-TyM" secondAttribute="top" id="ME8-PJ-37d"/>
+                                            <constraint firstItem="zbB-WG-QfJ" firstAttribute="leading" secondItem="WCb-wh-TyM" secondAttribute="leading" id="cr7-ad-67z"/>
+                                            <constraint firstAttribute="bottom" secondItem="zbB-WG-QfJ" secondAttribute="bottom" id="ojb-Rv-k1g"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="zbB-WG-QfJ" id="Dny-30-jfy"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="SpI-Tk-hBT" id="rR0-wa-zch"/>
+                                    <outlet property="delegate" destination="SpI-Tk-hBT" id="tS9-uS-td5"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="leading" secondItem="EwS-KU-h91" secondAttribute="leading" id="9e7-U3-YOZ"/>
-                            <constraint firstItem="5Kw-g6-SF3" firstAttribute="top" secondItem="AYU-OU-3hL" secondAttribute="bottom" constant="8" id="UbV-5x-tdc"/>
+                            <constraint firstItem="5Kw-g6-SF3" firstAttribute="leading" secondItem="EwS-KU-h91" secondAttribute="leading" id="Bc3-7u-rNJ"/>
+                            <constraint firstItem="gPA-ub-dGC" firstAttribute="top" secondItem="5Kw-g6-SF3" secondAttribute="bottom" id="Vxc-cD-crz"/>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="leading" secondItem="5Kw-g6-SF3" secondAttribute="leading" id="bdE-zp-Sqs"/>
+                            <constraint firstItem="5Kw-g6-SF3" firstAttribute="top" secondItem="AYU-OU-3hL" secondAttribute="bottom" id="cSC-yV-Lu8"/>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="trailing" secondItem="5Kw-g6-SF3" secondAttribute="trailing" id="g0N-m0-rps"/>
                             <constraint firstAttribute="trailing" secondItem="AYU-OU-3hL" secondAttribute="trailing" id="n1q-nN-KIa"/>
+                            <constraint firstAttribute="trailing" secondItem="5Kw-g6-SF3" secondAttribute="trailing" id="uRq-xQ-T1q"/>
                             <constraint firstItem="AYU-OU-3hL" firstAttribute="top" secondItem="Xkz-eC-Pvw" secondAttribute="bottom" id="yNm-TY-ehN"/>
-                            <constraint firstItem="5Kw-g6-SF3" firstAttribute="top" secondItem="AYU-OU-3hL" secondAttribute="bottom" constant="8" symbolic="YES" id="yrH-3R-6je"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="cell" destination="WCb-wh-TyM" id="Xiy-aB-uhY"/>
                         <outlet property="collectionView" destination="5Kw-g6-SF3" id="gIN-Gg-gn4"/>
                         <outlet property="detailMapView" destination="AYU-OU-3hL" id="cOl-9u-gCs"/>
+                        <outlet property="flowLayout" destination="8V4-8B-8lb" id="Pzp-K5-t4s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="noB-3R-Msa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1778" y="139"/>
+            <point key="canvasLocation" x="1776.8" y="138.98050974512745"/>
         </scene>
         <!--LoginVC-->
         <scene sceneID="RhX-UB-FEh">
